--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">.<span>Portfolio.</span></a></div>
+            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -130,7 +130,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>Java</span>
-                            <span>50%</span>
+                            <span>75%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
@@ -149,12 +149,12 @@
     <!-- teams section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">My teams</h2>
+            <h2 class="title">My team</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
+                        <div class="text">Sai Rushyanth Vattikonda</div>
                         <p>need to add 3.</p>
                     </div>
                 </div>
