--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Rushyanth and I'm a <span class="typing-2"></span></div>
@@ -153,35 +153,35 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
+                        <img src="profile-1.jpeg" alt="">
                         <div class="text">Sai Rushyanth Vattikonda</div>
                         <p>need to add 3.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
+                        <img src="profile-2.jpeg" alt="">
                         <div class="text">Someone name</div>
                         <p>need to add 4.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
+                        <img src="profile-3.jpeg" alt="">
                         <div class="text">Someone name</div>
                         <p>need to add 5.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
+                        <img src="profile-4.jpeg" alt="">
                         <div class="text">Someone name</div>
                         <p>need to add 6</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
+                        <img src="profile-5.jpeg" alt="">
                         <div class="text">Someone name</div>
                         <p>need to add 7</p>
                     </div>
