--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Rushyanth Vattikonda</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="mailto: rushyanth888@gmail.com">Hire me</a>
             </div>
         </div>
     </section>
@@ -59,7 +59,7 @@
                 <div class="column right">
                     <div class="text">I'm Rushyanth and I'm a <span class="typing-2"></span></div>
                     <p>My name is Rushyath and my portfolio is a representation of all that I've learned and accompplised as a science and engineering student</p>
-                    <a href="#">Download CV</a>
+                    <a href="Resume.pdf">Download CV</a>
                 </div>
             </div>
         </div>
@@ -251,7 +251,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">Rushyanth</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="#">Rushyanth</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
