--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="column right">
                     <div class="text">I'm Rushyanth and I'm a <span class="typing-2"></span></div>
                     <p>My name is Rushyath and my portfolio is a representation of all that I've learned and accompplised as a science and engineering student</p>
-                    <a href="Resume.pdf">Download CV</a>
+                    <a href="Resume new.pdf">Download CV</a>
                 </div>
             </div>
         </div>
